--- a/quizer/templates/quiz_edit.html
+++ b/quizer/templates/quiz_edit.html
@@ -23,7 +23,7 @@
 {% endfor %}
 </br>
 
-<input type="submit" value="Add Quiz" />
+<input type="submit" value="Add Quiz" class="btn btn-primary"/>
 </form>
 
 </br>
