--- a/quizer/templates/question_save.html
+++ b/quizer/templates/question_save.html
@@ -5,6 +5,6 @@
 <form method="post" action=".">
 {% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="save" />
+<input type="submit" value="save" class="btn btn-primary"/>
 </form>
 {% endblock %}
