--- a/quizer/templates/registration/register.html
+++ b/quizer/templates/registration/register.html
@@ -5,6 +5,6 @@
 <form method="post" action=".">
 {% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="register" />
+<input type="submit" value="register" class="btn btn-primary" />
 </form>
 {% endblock %}
